--- a/Assignment/JS/InMemory-POS/index.html
+++ b/Assignment/JS/InMemory-POS/index.html
@@ -117,6 +117,94 @@
                 </div>
             </aside>
 
+             <!-- Customers -->
+             <aside id="customer" class="d-flex flex-column align-items-center justify-content-evenly w-100 h-100">
+                <!-- Search bar -->
+                <div class="row">
+                    <nav class="navbar">
+                        <div class="container-fluid d-flex flex-column flex-lg-row">
+                            <form class="d-flex flex-column flex-lg-row" role="search">
+                                <input class="form-control me-2 mb-2 mb-lg-0" type="search" placeholder="Search"
+                                    aria-label="Search" id="txtCustomerSearch">
+                                <select class="btn btn-outline-light dropdown-toggle me-2 mb-2 mb-lg-0" type="button"
+                                    id="cusSearch" data-bs-toggle="dropdown" aria-expanded="false" style="background-color: rgb(182, 182, 182);">
+                                    <option><a class="dropdown-item" href="#">Customer Id</a></option>
+                                    <option><a class="dropdown-item" href="#">Name</a></option>
+                                </select>
+                                <button class="btn btn-outline-light me-2" type="submit" style="color: rgb(255, 255, 255); background-color: rgb(197, 28, 146);">Search</button>
+                            </form>
+                            <!-- Add Customers Button -->
+                            <button type="button" class="btn btn-danger" data-bs-toggle="modal"
+                                data-bs-target="#staticBackdrop" id="btnAddNewCustomer">
+                                Add New Customer
+                            </button>
+                        </div>
+                    </nav>
+                </div>
+
+                <!-- Modal -->
+                <div class="modal fade" id="staticBackdrop" data-bs-backdrop="static" data-bs-keyboard="false"
+                    tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
+                    <div class="modal-dialog">
+                        <div class="modal-content">
+                            <div class="modal-header">
+                                <h5 class="modal-title" id="staticBackdropLabel">Add Customers</h5>
+                                <button type="button" class="btn-close" data-bs-dismiss="modal"
+                                    aria-label="Close"></button>
+                            </div>
+
+                            <!-- Form -->
+                            <div class="d-flex justify-content-center">
+                                <form class="w-75">
+                                    <div class="mb-3">
+                                        <label for="txtCusId" class="form-label">Customer ID</label>
+                                        <input type="text" class="form-control" id="txtCusId">
+                                        <span></span>
+                                    </div>
+                                    <div class="mb-3">
+                                        <label for="txtCusName" class="form-label">Customer Name</label>
+                                        <input type="text" class="form-control" id="txtCusName">
+                                        <span></span>
+                                    </div>
+                                    <div class="mb-3">
+                                        <label for="txtAddress" class="form-label">Address</label>
+                                        <input type="text" class="form-control" id="txtAddress">
+                                        <span></span>
+                                    </div>
+                                    <div class="mb-3">
+                                        <label for="txtSalary" class="form-label">Salary</label>
+                                        <input type="text" class="form-control" id="txtSalary">
+                                        <span></span>
+                                    </div>
+                                </form>
+                            </div>
+
+                            <div class="modal-footer">
+                                <button type="button" class="btn btn-warning" id="btnCustomerClear">Clear</button>
+                                <button type="button" class="btn btn-success" id="btnSaveCustomer">Save</button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- Table -->
+                <div class="row d-flex overflow-auto mb-5 h-50 col-11">
+                    <table class="table table-striped table-hover" id="tblCustomer">
+                        <thead class="sticky-top" style="background-color: rgb(255, 227, 246);">
+                            <tr>
+                                <th scope="col">Customer ID</th>
+                                <th scope="col">Name</th>
+                                <th scope="col">Address</th>
+                                <th scope="col">Salary</th>
+                                <th scope="col">Options</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+
+                        </tbody>
+                    </table>
+                </div>
+            </aside>
            
 
         </section>
