--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             bottom: 0;
             right: 0;
             margin: auto;
-            background: url("assest/images/lod1.gif");
+            background: url("assest/images/load.gif");
             background-size: cover;
             background-position: center;
         }
