--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             left: 0;
             bottom: 0;
             right: 0;
-            background: #f9f5f1;
+            background: #ffffff;
         }
 
         #loader>div {
