--- a/index.html
+++ b/index.html
@@ -21,19 +21,19 @@
             left: 0;
             bottom: 0;
             right: 0;
-            background: #ffffff;
+            background: #ececec;
         }
 
         #loader>div {
-            width: 290px;
-            height: 290px;
+            width: 490px;
+            height: 490px;
             position: absolute;
             top: 0;
             left: 0;
             bottom: 0;
             right: 0;
             margin: auto;
-            background: url("assest/images/load.gif");
+            background: url("assest/images/load3.gif");
             background-size: cover;
             background-position: center;
         }
