in memory pos customer form completed and portfolio assignment css updated

--- a/Assignment/JS/InMemory-POS/index.html
+++ b/Assignment/JS/InMemory-POS/index.html
@@ -3,7 +3,9 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>The Flora POS System</title>
+    <title>Flower Store</title>
+    <!-- <meta http-equiv="refresh" content="3; ">> -->
+    <link rel="icon" href="assest/img/store.png">
 
     <!-- Font -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -508,10 +510,10 @@
 
     <script src="util/Validations.js"></script>
 
-    <script src="controller/CustomerController.js"></script>
+    <script src="controller/CustomerControler.js"></script>
     <script src="controller/ItemController.js"></script>
     <script src="controller/PurchaseOrderController.js"></script>
-    <script src="controller/OrderDetailsController.js"></script>
+    <script src="controller/orderDetailController.js"></script>
 
 
     <script src="util/Alerts.js"></script>
