portfolio assignment updated

--- a/index.html
+++ b/index.html
@@ -527,7 +527,7 @@
 
                 <div class="assignment__item">
                     <a href="Assignment/JS/InMemory-POS/index.html">
-                        <img src="assest/images/as6js1.PNG" alt="" class="assignment__img">
+                        <img src="assest/images/asjsInMemory.PNG" alt="" class="assignment__img">
                     </a>
                     <div class="assignment__data">
                         <p class="assinment__subtitle">JavaScript InMemory-POS</p>
