--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <title>Portfolio</title>
     <!-- <meta http-equiv="refresh" content="3; ">> -->
-    <link rel="icon" href="assest/images/Savii1234.png">
+    <link rel="icon" href="assest/images/portfolioicon.png">
     <style>
         #loader {
             transition: opacity 1s;
@@ -658,7 +658,7 @@
         });
 
         let typed = new Typed(".typing", {
-        strings: ["", "Web Developer", "Mobile Developer", "UI/UX Engineer"],
+        strings: ["Web Developer", "Mobile Developer", "UI/UX Engineer"],
         typeSpeed: 150,
         backSpeed: 100,
         loop: true
