portfolio icon added

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <!-- CSS -->
     <link rel="stylesheet" href="assest/CSS/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css" rel="stylesheet">
     <title>Portfolio</title>
     <!-- <meta http-equiv="refresh" content="3; ">> -->
     <link rel="icon" href="assest/images/portfolioicon.png">
@@ -51,17 +52,23 @@
 
             <div class="nav__menu" id="nav-menu">
                 <ul class="nav__list">
-                    <li><a href="#home" class="nav__link active-link">Home</a></li>
+                    <li id="btnHome">
+                        <a href="#home" class="nav__link active-link"><i class="bi bi-house-fill"></i>Home</a></li>
 
-                    <li><a href="#about" class="nav__link active-link">About</a></li>
+                    <li id="btnAbout">
+                        <a href="#about" class="nav__link active-link"><i class="bi bi-award-fill"></i>About</a></li>
 
-                    <li><a href="#service" class="nav__link active-link">Services</a></li>
+                    <li id="btnService">
+                        <a href="#service" class="nav__link active-link"><i class="bi bi-layers-fill"></i>Services</a></li>
 
-                    <li><a href="#portfolio" class="nav__link active-link">Projects</a></li>
+                    <li id="btnPortfolio">
+                        <a href="#portfolio" class="nav__link active-link"><i class="bi bi-display-fill"></i>Projects</a></li>
 
-                    <li><a href="#assignment" class="nav__link active-link">Assignment</a></li>
+                    <li id="btnAssignment">
+                        <a href="#assignment" class="nav__link active-link"><i class="bi bi-file-earmark-code-fill"></i>Assignment</a></li>
 
-                    <li><a href="#contact" class="nav__link active-link">contact</a></li>
+                    <li id="btnContact">
+                        <a href="#contact" class="nav__link active-link"><i class="bi bi-chat-text-fill"></i>Contact</a></li>
                 </ul>
 
                 <div class="nav__close" id="nav-close">
