portfolio icon and service css updated

--- a/index.html
+++ b/index.html
@@ -53,22 +53,28 @@
             <div class="nav__menu" id="nav-menu">
                 <ul class="nav__list">
                     <li id="btnHome">
-                        <a href="#home" class="nav__link active-link"><i class="bi bi-house-fill"></i>Home</a></li>
+                        <i id="nav_icon" class="bi bi-house-fill"></i>
+                        <a href="#home" class="nav__link active-link">Home</a></li>
 
                     <li id="btnAbout">
-                        <a href="#about" class="nav__link active-link"><i class="bi bi-award-fill"></i>About</a></li>
+                        <i id="nav_icon" class="bi bi-award-fill"></i>
+                        <a href="#about" class="nav__link active-link">About</a></li>
 
                     <li id="btnService">
-                        <a href="#service" class="nav__link active-link"><i class="bi bi-layers-fill"></i>Services</a></li>
+                        <i id="nav_icon" class="bi bi-layers-fill"></i>
+                        <a href="#service" class="nav__link active-link">Services</a></li>
 
                     <li id="btnPortfolio">
-                        <a href="#portfolio" class="nav__link active-link"><i class="bi bi-display-fill"></i>Projects</a></li>
+                        <i id="nav_icon" class="bi bi-display-fill"></i>
+                        <a href="#portfolio" class="nav__link active-link">Projects</a></li>
 
                     <li id="btnAssignment">
-                        <a href="#assignment" class="nav__link active-link"><i class="bi bi-file-earmark-code-fill"></i>Assignment</a></li>
+                        <i id="nav_icon" class="bi bi-file-earmark-code-fill"></i>
+                        <a href="#assignment" class="nav__link active-link">Assignment</a></li>
 
                     <li id="btnContact">
-                        <a href="#contact" class="nav__link active-link"><i class="bi bi-chat-text-fill"></i>Contact</a></li>
+                        <i id="nav_icon" class="bi bi-chat-text-fill"></i>
+                        <a href="#contact" class="nav__link active-link">Contact</a></li>
                 </ul>
 
                 <div class="nav__close" id="nav-close">
