--- a/index.html
+++ b/index.html
@@ -671,7 +671,7 @@
         });
 
         let typed = new Typed(".typing", {
-        strings: ["Web Developer", "Mobile Developer", "UI/UX Engineer"],
+        strings: [" ","Full-Stack Developer","Web Developer", "Mobile Developer", "UI/UX Engineer"],
         typeSpeed: 150,
         backSpeed: 100,
         loop: true
