readme file added

--- a/index.html
+++ b/index.html
@@ -327,9 +327,9 @@
                         <img src="assest/images/as1.PNG" alt="" class="assignment__img">
                     </a>
                     <div class="assignment__data">
-                        <p class="assinment__subtitle">CSS</p>
+                        <p class="assinment__subtitle">Assignment 01</p>
                         <a href="Assignment/CSS/CaseOne/index.html">
-                            <h3 class="assignment__title">Assignment 01</h3>
+                            <h3 class="assignment__title">CSS Style</h3>
                         </a>
                     </div>
                 </div>
@@ -339,9 +339,9 @@
                         <img src="assest/images/as2.PNG" alt="" class="assignment__img">
                     </a>
                     <div class="assignment__data">
-                        <p class="assinment__subtitle">CSS</p>
+                        <p class="assinment__subtitle">Assignment 02</p>
                         <a href="Assignment/CSS/CaseTwo/index.html">
-                            <h3 class="assignment__title">Assignment 02</h3>
+                            <h3 class="assignment__title">CSS Web</h3>
                         </a>
                     </div>
                 </div>
@@ -351,9 +351,9 @@
                         <img src="assest/images/as3.PNG" alt="" class="assignment__img">
                     </a>
                     <div class="assignment__data">
-                        <p class="assinment__subtitle">CSS</p>
+                        <p class="assinment__subtitle">Assinment 03</p>
                         <a href="Assignment/CSS/CaseThree/index.html">
-                            <h3 class="assignment__title">Assignment 03</h3>
+                            <h3 class="assignment__title">CSS Fixed</h3>
                         </a>
                     </div>
                 </div>
@@ -363,9 +363,9 @@
                         <img src="assest/images/as4.PNG" alt="" class="assignment__img">
                     </a>
                     <div class="assignment__data">
-                        <p class="assinment__subtitle">CSS</p>
+                        <p class="assinment__subtitle">Assignment 04</p>
                         <a href="Assignment/CSS/CaseFour/index.html">
-                            <h3 class="assignment__title">Assignment 04</h3>
+                            <h3 class="assignment__title">CSS Sticky</h3>
                         </a>
                     </div>
                 </div>
@@ -375,9 +375,9 @@
                         <img src="assest/images/as5.PNG" alt="" class="assignment__img">
                     </a>
                     <div class="assignment__data">
-                        <p class="assinment__subtitle">CSS</p>
+                        <p class="assinment__subtitle">Assignment 05</p>
                         <a href="Assignment/CSS/CaseFive/index.html">
-                            <h3 class="assignment__title">Assignment 05</h3>
+                            <h3 class="assignment__title">CSS Grid-01</h3>
                         </a>
                     </div>
                 </div>
@@ -387,9 +387,9 @@
                         <img src="assest/images/as6.PNG" alt="" class="assignment__img">
                     </a>
                     <div class="assignment__data">
-                        <p class="assinment__subtitle">CSS</p>
+                        <p class="assinment__subtitle">Assignment 06</p>
                         <a href="Assignment/CSS/CaseSix/index.html">
-                            <h3 class="assignment__title">Assignment 06</h3>
+                            <h3 class="assignment__title">CSS Grid-02</h3>
                         </a>
                     </div>
                 </div>
@@ -399,9 +399,9 @@
                         <img src="assest/images/as1T1.PNG" alt="" class="assignment__img">
                     </a>
                     <div class="assignment__data">
-                        <p class="assinment__subtitle">Transitions</p>
+                        <p class="assinment__subtitle">Assignment 01</p>
                         <a href="Assignment/Transitions/CaseOne/index.html">
-                            <h3 class="assignment__title">Assignment 01</h3>
+                            <h3 class="assignment__title">Transitions 01</h3>
                         </a>
                     </div>
                 </div>
@@ -411,9 +411,9 @@
                         <img src="assest/images/as2T2.PNG" alt="" class="assignment__img">
                     </a>
                     <div class="assignment__data">
-                        <p class="assinment__subtitle">Transitions</p>
+                        <p class="assinment__subtitle">Assignment 02</p>
                         <a href="Assignment/Transitions/CaseTwo/index.html">
-                            <h3 class="assignment__title">Assignment 02</h3>
+                            <h3 class="assignment__title">Transitions 02</h3>
                         </a>
                     </div>
                 </div>
@@ -423,9 +423,9 @@
                         <img src="assest/images/as1an1.PNG" alt="" class="assignment__img">
                     </a>
                     <div class="assignment__data">
-                        <p class="assinment__subtitle">Animations</p>
+                        <p class="assinment__subtitle">Assignment 01</p>
                         <a href="Assignment/Animation/CaseThree/index.html">
-                            <h3 class="assignment__title">Assignment 01</h3>
+                            <h3 class="assignment__title">Animation Box</h3>
                         </a>
                     </div>
                 </div>
@@ -435,9 +435,9 @@
                         <img src="assest/images/as2an2.PNG" alt="" class="assignment__img">
                     </a>
                     <div class="assignment__data">
-                        <p class="assinment__subtitle">Animations</p>
+                        <p class="assinment__subtitle">Assignment 02</p>
                         <a href="Assignment/Animation/CaseFour/index.html">
-                            <h3 class="assignment__title">Assignment 02</h3>
+                            <h3 class="assignment__title">Animation Warter Drop</h3>
                         </a>
                     </div>
                 </div>
@@ -447,9 +447,9 @@
                         <img src="assest/images/as3an3.PNG" alt="" class="assignment__img">
                     </a>
                     <div class="assignment__data">
-                        <p class="assinment__subtitle">Animations</p>
+                        <p class="assinment__subtitle">Assignment 03</p>
                         <a href="Assignment/Animation/CaseFive/index.html">
-                            <h3 class="assignment__title">Assignment 03</h3>
+                            <h3 class="assignment__title">Animation Image Slider</h3>
                         </a>
                     </div>
                 </div>
@@ -459,9 +459,9 @@
                         <img src="assest/images/as4an4.PNG" alt="" class="assignment__img">
                     </a>
                     <div class="assignment__data">
-                        <p class="assinment__subtitle">Animations</p>
+                        <p class="assinment__subtitle">Assignment 04</p>
                         <a href="Assignment/Animation/CaseSix/index.html">
-                            <h3 class="assignment__title">Assignment 04</h3>
+                            <h3 class="assignment__title">Animation Car</h3>
                         </a>
                     </div>
                 </div>
@@ -471,9 +471,9 @@
                         <img src="assest/images/as5fr1.PNG" alt="" class="assignment__img">
                     </a>
                     <div class="assignment__data">
-                        <p class="assinment__subtitle">CSS-FrameWorks</p>
+                        <p class="assinment__subtitle">Assignment</p>
                         <a href="Assignment/CSS-FrameWork/POS/index.html">
-                            <h3 class="assignment__title">Assignment</h3>
+                            <h3 class="assignment__title">CSS-FrameWorks</h3>
                         </a>
                     </div>
                 </div>
@@ -483,9 +483,9 @@
                         <img src="assest/images/as6js1.PNG" alt="" class="assignment__img">
                     </a>
                     <div class="assignment__data">
-                        <p class="assinment__subtitle">JavaScript SPA</p>
+                        <p class="assinment__subtitle">Assignment</p>
                         <a href="Assignment/JS/SPA/index.html">
-                            <h3 class="assignment__title">Assignment</h3>
+                            <h3 class="assignment__title">JavaScript SPA</h3>
                         </a>
                     </div>
                 </div>
@@ -495,9 +495,9 @@
                         <img src="assest/images/asjsQUA1.PNG" alt="" class="assignment__img">
                     </a>
                     <div class="assignment__data">
-                        <p class="assinment__subtitle">JavaScript QUA</p>
+                        <p class="assinment__subtitle">Assignment 01</p>
                         <a href="Assignment/JS/QUA/Assignment01.html">
-                            <h3 class="assignment__title">Assignment 01</h3>
+                            <h3 class="assignment__title">JavaScript QUA 01</h3>
                         </a>
                     </div>
                 </div>
@@ -507,9 +507,9 @@
                         <img src="assest/images/sajsUQA2.PNG" alt="" class="assignment__img">
                     </a>
                     <div class="assignment__data">
-                        <p class="assinment__subtitle">JavaScript QUA</p>
+                        <p class="assinment__subtitle">Assignment 02</p>
                         <a href="Assignment/JS/QUA/Assignment02.html">
-                            <h3 class="assignment__title">Assignment 02</h3>
+                            <h3 class="assignment__title">JavaScript QUA 02</h3>
                         </a>
                     </div>
                 </div>
@@ -519,9 +519,9 @@
                         <img src="assest/images/asjsKNIGHT.PNG" alt="" class="assignment__img">
                     </a>
                     <div class="assignment__data">
-                        <p class="assinment__subtitle">JavaScript KNIGHT</p>
+                        <p class="assinment__subtitle">Assignment</p>
                         <a href="Assignment/JS/KNIGHT/index.html">
-                            <h3 class="assignment__title">Assignment</h3>
+                            <h3 class="assignment__title">JavaScript KNIGHT</h3>
                         </a>
                     </div>
                 </div>
@@ -531,9 +531,9 @@
                         <img src="assest/images/asJsCal.PNG" alt="" class="assignment__img">
                     </a>
                     <div class="assignment__data">
-                        <p class="assinment__subtitle">JavaScript Calculator</p>
+                        <p class="assinment__subtitle">Assignment</p>
                         <a href="Assignment/JS/CAL/index.html">
-                            <h3 class="assignment__title">Assignment</h3>
+                            <h3 class="assignment__title">JavaScript Calculator</h3>
                         </a>
                     </div>
                 </div>
@@ -543,9 +543,9 @@
                         <img src="assest/images/asjsInMemory.PNG" alt="" class="assignment__img">
                     </a>
                     <div class="assignment__data">
-                        <p class="assinment__subtitle">JavaScript InMemory-POS</p>
+                        <p class="assinment__subtitle">Assignment</p>
                         <a href="Assignment/JS/InMemory-POS/index.html">
-                            <h3 class="assignment__title">Assignment</h3>
+                            <h3 class="assignment__title">JavaScript InMemory-POS</h3>
                         </a>
                     </div>
                 </div>
@@ -555,9 +555,9 @@
                         <img src="assest/images/sampleproject.png" alt="" class="assignment__img">
                     </a>
                     <div class="assignment__data">
-                        <p class="assinment__subtitle">sample Assignment</p>
+                        <p class="assinment__subtitle">sample</p>
                         <a href="">
-                            <h3 class="assignment__title">Sample</h3>
+                            <h3 class="assignment__title">sample Assignment</h3>
                         </a>
                     </div>
                 </div>
@@ -671,7 +671,7 @@
         });
 
         let typed = new Typed(".typing", {
-        strings: [" ","Full-Stack Developer","Web Developer", "Mobile Developer", "UI/UX Engineer"],
+        strings: ["FullStack Developer","Web Developer", "Mobile Developer", "UI/UX Engineer"],
         typeSpeed: 150,
         backSpeed: 100,
         loop: true
