contact me updated

--- a/index.html
+++ b/index.html
@@ -573,9 +573,7 @@
 
                     <p class="contact__discription">
                         I am Available for Web Designing & Web Development work.
-                        Connect With me phone :
-                        <a href="tel:+(94)702626097"> +(94)702626097</a>
-                        or email :
+                        Connect With me email :
                         <a href="mailto:savindidadallage@gmail.com"> savindidadallage@gmail.com</a>
                     </p>
 
